# Proseproof

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/adr/: 0001-composable-pipeline.md  0002-profile-scope.md  0003-correction-data-structure.md  0004-fragment-naming.md  0005-mit-license.md  0006-strategy-middleware-architecture.md  0007-outline-as-intermediate-artifact.md  0008-precheck-hints-not-errors.md  0009-split-mode-matrix.md  0010-three-tier-content-review.md  0011-middleware-chain-closure.md  0012-core-testing-and-modernization.md  0013-defaults-py-split.md  0014-dead-code-classification.md  0015-outline-extra-signals.md  0016-image-strip-skip-sections.md  0017-file-editing-tools.md
docs/prd/: v0.2.0.md  v0.3.0.md
examples/custom_profile/: README.md  config.json  profile.py
proseproof/: __init__.py  cli.py
proseproof/core/: api_client.py  base_profile.py  config_loader.py  defaults.py  env_config.py  format_enforcement.py  idml_extractor.py  logging_utils.py  manual_split.py  middleware.py  middleware_runner.py  pandoc_utils.py  parsing.py  paths.py  proofread_middleware.py  strategy.py
tests/: test_api_client.py  test_deep_split.py  test_format_enforcement.py  test_heading_split.py  test_integration.py  test_latex_generator.py  test_light_review.py  test_manifest.py  test_middleware.py  test_middleware_chain.py  test_outline_extractor.py  test_parsing.py  test_similarity.py  test_smart_split_v2.py  test_strategy.py  test_structural_review.py  test_v030_features.py
tools/: build_minimal_texlive.py
(+41 files in other folders)
