[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proseproof"
version = "0.3.0"
description = "通用 AI 文稿校对与 LaTeX 排版工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Proseproof Contributors"}
]
keywords = ["proofreading", "latex", "ai", "text-processing", "typesetting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.31",
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "sympy>=1.12",
    "python-docx>=1.0",
]

[project.optional-dependencies]
search = ["ddgs>=4.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
proseproof = "proseproof.cli:main"

[project.urls]
Homepage = "https://github.com/proseproof/proseproof"
Documentation = "https://proseproof.readthedocs.io"
Repository = "https://github.com/proseproof/proseproof"
Issues = "https://github.com/proseproof/proseproof/issues"

[tool.setuptools.packages.find]
include = ["proseproof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
